RESOLVED FIXED140369
Geolocation objects shouldn't prevent page caching.
https://bugs.webkit.org/show_bug.cgi?id=140369
Summary Geolocation objects shouldn't prevent page caching.
Andreas Kling
Reported 2015-01-12 12:50:37 PST
We already have code for suspending/resuming Geolocation objects on iOS, but I see no reason we can't share it with other platforms.
Attachments
Patch (15.18 KB, patch)
2015-01-12 12:53 PST, Andreas Kling
joepeck: review+
buildbot: commit-queue-
Archive of layout-test-results from ews103 for mac-mountainlion (513.70 KB, application/zip)
2015-01-12 13:41 PST, Build Bot
no flags
Archive of layout-test-results from ews104 for mac-mountainlion-wk2 (519.85 KB, application/zip)
2015-01-12 13:44 PST, Build Bot
no flags
Patch for landing (19.04 KB, patch)
2015-01-12 14:26 PST, Andreas Kling
no flags
Andreas Kling
Comment 1 2015-01-12 12:53:39 PST
Joseph Pecoraro
Comment 2 2015-01-12 13:29:15 PST
Comment on attachment 244458 [details] Patch Nice! r=me
Build Bot
Comment 3 2015-01-12 13:41:53 PST
Comment on attachment 244458 [details] Patch Attachment 244458 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/6511104075235328 New failing tests: fast/dom/Geolocation/no-page-cache.html
Build Bot
Comment 4 2015-01-12 13:41:56 PST
Created attachment 244462 [details] Archive of layout-test-results from ews103 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Build Bot
Comment 5 2015-01-12 13:44:17 PST
Comment on attachment 244458 [details] Patch Attachment 244458 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/5229146665910272 New failing tests: fast/dom/Geolocation/no-page-cache.html
Build Bot
Comment 6 2015-01-12 13:44:20 PST
Created attachment 244463 [details] Archive of layout-test-results from ews104 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Andreas Kling
Comment 7 2015-01-12 14:26:57 PST
Created attachment 244467 [details] Patch for landing
WebKit Commit Bot
Comment 8 2015-01-12 15:14:24 PST
Comment on attachment 244467 [details] Patch for landing Clearing flags on attachment: 244467 Committed r178300: <http://trac.webkit.org/changeset/178300>
WebKit Commit Bot
Comment 9 2015-01-12 15:14:30 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.